--- a/web/templates/analize_yolo_view.html
+++ b/web/templates/analize_yolo_view.html
@@ -14,6 +14,14 @@
     />
     <link
       rel="stylesheet"
+      href="{{ url_for('static', filename='css/footer/style.css') }}"
+    />
+    <link
+      rel="stylesheet"
+      href="{{ url_for('static', filename='css/legend/style.css') }}"
+    />
+    <link
+      rel="stylesheet"
       href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"
     />
   </head>
@@ -24,16 +32,6 @@
         <h1 class="display-5">
           Detección de masas cancerígenas en mamografías con YOLOv8
         </h1>
-        <!-- <p class="lead mb-0">Sube una imagen y la analizamos en tiempo real!</p>
-        <p class="mb-5 font-weight-light">
-          Creado por Mateo Rodríguez Lavado
-          <a
-            href="https://github.com/marodlav/breast_abnormalities_detection"
-            class="text-white"
-          >
-            <u><em class="fa fa-github ml-2"></em></u>
-          </a>
-        </p> -->
 
         <div class="row">
           <div class="col-md-6">
@@ -47,6 +45,58 @@
           <div class="col-md-6">
             <div class="row py-4" style="height: 100%">
               <div class="col-lg-6 align-self-center mx-auto">
+                <div id="legend" style="display: none">
+                  <h2>Tipos de anomalia</h2>
+                  <div class="row d-flex flex-row justify-content-start">
+                    <div
+                      class="container colored-label"
+                      style="background-color: rgba(255, 0, 0, 255)"
+                    ></div>
+                    <p class="legend-label">Calcificación</p>
+                  </div>
+                  <div class="row d-flex flex-row justify-content-start">
+                    <div
+                      class="container colored-label"
+                      style="background-color: rgba(0, 0, 255, 255)"
+                    ></div>
+                    <p class="legend-label">Masa</p>
+                  </div>
+                  <div class="row d-flex flex-row justify-content-start">
+                    <div
+                      class="container colored-label"
+                      style="background-color: rgba(234, 247, 42, 255)"
+                    ></div>
+                    <p class="legend-label">Asimetria</p>
+                  </div>
+                  <div class="row d-flex flex-row justify-content-start">
+                    <div
+                      class="container colored-label"
+                      style="background-color: rgba(0, 0, 0, 255)"
+                    ></div>
+                    <p class="legend-label">Cluster</p>
+                  </div>
+                  <div class="row d-flex flex-row justify-content-start">
+                    <div
+                      class="container colored-label"
+                      style="background-color: rgba(161, 97, 19, 255)"
+                    ></div>
+                    <p class="legend-label">Distorsión</p>
+                  </div>
+                  <div class="row d-flex flex-row justify-content-start">
+                    <div
+                      class="container colored-label"
+                      style="background-color: rgba(156, 8, 158, 255)"
+                    ></div>
+                    <p class="legend-label">Región espiculada</p>
+                  </div>
+                  <div class="row d-flex flex-row justify-content-start">
+                    <div
+                      class="container colored-label"
+                      style="background-color: rgba(97, 97, 97, 255)"
+                    ></div>
+                    <p class="legend-label">No asociada</p>
+                  </div>
+                </div>
                 <!-- Upload image input-->
                 <div
                   id="upload_image_container"
@@ -141,6 +191,19 @@
         </div>
       </header>
     </div>
+
+    <footer class="text-center text-lg-start fixed-bottom">
+      <div class="text-center p-3">
+        <p id="created_by" class="mb font-weight-bold">
+          Creado por Eduard Conesa Guerrero
+          <a
+            href="https://github.com/edcogue/breast-mammography-detection"
+          >
+            <u><em class="fa fa-github ml-2 fa-3x"></em></u>
+          </a>
+        </p>
+      </div>
+    </footer>
 
     <script src="{{ url_for('static', filename='js/jquery.js') }}"></script>
     <script src="{{ url_for('static', filename='js/bootstrap.js') }}"></script>
