--- a/web/templates/denoise_view.html
+++ b/web/templates/denoise_view.html
@@ -14,6 +14,10 @@
     />
     <link
       rel="stylesheet"
+      href="{{ url_for('static', filename='css/footer/style.css') }}"
+    />
+    <link
+      rel="stylesheet"
       href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"
     />
   </head>
@@ -24,17 +28,6 @@
         <h1 class="display-5">
           Supresión de ruido para mamografías
         </h1>
-        <!-- <p class="lead mb-0">Sube una imagen y la analizamos en tiempo real!</p>
-        <p class="mb-5 font-weight-light">
-          Creado por Mateo Rodríguez Lavado
-          <a
-            href="https://github.com/marodlav/breast_abnormalities_detection"
-            class="text-white"
-          >
-            <u><em class="fa fa-github ml-2"></em></u>
-          </a>
-        </p> -->
-
         <div class="row">
           <div class="col-md-6">
             <div class="image-area mx-4 mt-4">
@@ -141,6 +134,19 @@
         </div>
       </header>
     </div>
+
+    <footer class="text-center text-lg-start fixed-bottom">
+      <div class="text-center p-3">
+        <p id="created_by" class="mb font-weight-bold">
+          Creado por Eduard Conesa Guerrero
+          <a
+            href="https://github.com/edcogue/breast-mammography-detection"
+          >
+            <u><em class="fa fa-github ml-2 fa-3x"></em></u>
+          </a>
+        </p>
+      </div>
+    </footer>
 
     <script src="{{ url_for('static', filename='js/jquery.js') }}"></script>
     <script src="{{ url_for('static', filename='js/bootstrap.js') }}"></script>
