--- a/web/templates/index.html
+++ b/web/templates/index.html
@@ -14,6 +14,10 @@
     />
     <link
       rel="stylesheet"
+      href="{{ url_for('static', filename='css/footer/style.css') }}"
+    />
+    <link
+      rel="stylesheet"
       href="{{ url_for('static', filename='css/flip_card/style.css') }}"
     />
     <link
@@ -26,16 +30,6 @@
     <div class="py-4">
       <header class="text-white text-center">
         <h1 style="color: black">Breast Cancer App</h1>
-        <!-- <p class="lead mb-0">Sube una imagen y la analizamos en tiempo real!</p>
-        <p class="mb-5 font-weight-light">
-          Creado por Mateo Rodríguez Lavado
-          <a
-            href="https://github.com/marodlav/breast_abnormalities_detection"
-            class="text-white"
-          >
-            <u><em class="fa fa-github ml-2"></em></u>
-          </a>
-        </p> -->
       </header>
       <div class="row justify-content-center">
         <div class="col-md-4 d-flex justify-content-center">
@@ -121,6 +115,20 @@
         </div>
       </div>
     </div>
+
+    <footer
+      class="text-center text-lg-start fixed-bottom"
+      style="background-color: rgba(0, 0, 0, 0)"
+    >
+      <div class="text-center p-3">
+        <p id="created_by" class="mb font-weight-bold" style="color: black">
+          Creado por Eduard Conesa Guerrero
+          <a href="https://github.com/edcogue/breast-mammography-detection">
+            <u><em class="fa fa-github ml-2 fa-3x"></em></u>
+          </a>
+        </p>
+      </div>
+    </footer>
 
     <script src="{{ url_for('static', filename='js/jquery.js') }}"></script>
     <script src="{{ url_for('static', filename='js/bootstrap.js') }}"></script>
