--- a/web/templates/index.html
+++ b/web/templates/index.html
@@ -116,19 +116,7 @@
       </div>
     </div>
 
-    <footer
-      class="text-center text-lg-start fixed-bottom"
-      style="background-color: rgba(0, 0, 0, 0)"
-    >
-      <div class="text-center p-3">
-        <p id="created_by" class="mb font-weight-bold" style="color: black">
-          Creado por Eduard Conesa Guerrero
-          <a href="https://github.com/edcogue/breast-mammography-detection">
-            <u><em class="fa fa-github ml-2 fa-3x"></em></u>
-          </a>
-        </p>
-      </div>
-    </footer>
+    {% include "partials/footer.html" %}
 
     <script src="{{ url_for('static', filename='js/jquery.js') }}"></script>
     <script src="{{ url_for('static', filename='js/bootstrap.js') }}"></script>
